# RShell

./: .gitignore  .gitmodules  Add.cpp  Base.h  CMakeLists.txt  Makefile  Operator.h  Or.h  README.md  Semi.cpp  Semi.h  cmake_install.cmake  names.txt  old.txt  project.exe.stackdump  rshell.exe.stackdump  temp.cpp  test.exe.stackdump
Source/: Add.cpp  CMakeLists.txt  Command.cpp  Makefile  Or.cpp  Parser.cpp  Parser.h  Semi.cpp  cmake_install.cmake  main.cpp  project.exe.stackdump
header/: Add.h  Base.h  Command.h  ConstructTree.h  Operator.h  Or.h  Parser.h  Pipe.h  Redirect.h  Semi.h  Test.h
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  multiple_commands_tests.sh  output_redirection_tests.sh  pipe_operator_tests.sh  precedence_tests.sh  single_command_tests.sh  test_literal_tests.sh  test_symbolic_tests.sh
prototype/: prototype.cpp
src/: Add.cpp  AppendOutput.cpp  Command.cpp  ConstructTree.cpp  Or.cpp  Parser.cpp  Pipe.cpp  RedirectInput.cpp  RedirectOutput.cpp  Semi.cpp  main.cpp  test.cpp
unit_tests/: test.cpp
